# repo-health-analysis

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: checkpoint2-evidence.md  checkpoint3-evidence.md  checkpoint3.md  verified_questions_cp3.md
scripts/: run_dashboard.py  verify_setup.py
src/: __init__.py  config.py
src/agent/: __init__.py  grounded_chat.py
src/analytics/: __init__.py  correlation.py  health_metrics.py  metrics.py
src/api/: __init__.py  main.py
src/dashboard/: __init__.py  app.py  data_loaders.py
src/database/: models.py  session.py
src/ingestion/: __init__.py  batch.py  comments.py  commits.py  contributors.py  documents.py  github_client.py  ingest.py  issues.py  pull_requests.py  releases.py  utils.py
src/mcp_servers/: __init__.py  server.py
src/reporting/: __init__.py  report.py
src/retrieval/: __init__.py  corpus.py  tfidf.py
tests/: __init__.py  test_comments_ingestion.py  test_commits.py  test_config.py  test_correlation.py  test_github_pagination.py  test_grounded_chat.py  test_health_metrics.py  test_ingestion.py  test_issues.py  test_label_distribution.py  test_metrics.py  test_pull_requests.py  test_reporting.py  test_retrieval.py
